# relf

./: .gitignore  CMakeLists.txt  ELF.md  README.md  TODO.md  build.sh  test.sh
include/: cli.h  relf.h  utils.h
src/: cli.c  main.c  relf.c
